[gd_scene load_steps=3 format=2]

[ext_resource path="res://RegisterScript.gd" type="Script" id=1]
[ext_resource path="res://154346.png" type="Texture" id=2]

[node name="SignupScreen" type="Node2D"]

[node name="RegisterScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="RegisterScreen"]
margin_left = 35.0
margin_top = 35.0
margin_right = 988.0
margin_bottom = 576.0

[node name="Title" type="Label" parent="RegisterScreen/VBoxContainer"]
margin_right = 953.0
margin_bottom = 14.0
text = "Register"

[node name="EmailTitle" type="Label" parent="RegisterScreen/VBoxContainer"]
margin_top = 18.0
margin_right = 953.0
margin_bottom = 32.0
text = "Email"

[node name="Email" type="LineEdit" parent="RegisterScreen/VBoxContainer"]
margin_top = 36.0
margin_right = 953.0
margin_bottom = 60.0

[node name="PasswordTitle" type="Label" parent="RegisterScreen/VBoxContainer"]
margin_top = 64.0
margin_right = 953.0
margin_bottom = 78.0
text = "Password"

[node name="Password" type="LineEdit" parent="RegisterScreen/VBoxContainer"]
margin_top = 82.0
margin_right = 953.0
margin_bottom = 106.0

[node name="UsernameTitle" type="Label" parent="RegisterScreen/VBoxContainer"]
margin_top = 110.0
margin_right = 953.0
margin_bottom = 124.0
text = "Username"

[node name="Username" type="LineEdit" parent="RegisterScreen/VBoxContainer"]
margin_top = 128.0
margin_right = 953.0
margin_bottom = 152.0

[node name="LoginButton" type="TextureButton" parent="RegisterScreen/VBoxContainer"]
margin_left = 326.0
margin_top = 156.0
margin_right = 626.0
margin_bottom = 390.0
rect_min_size = Vector2( 300, 234 )
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
expand = true

[node name="HTTPRequest" type="HTTPRequest" parent="RegisterScreen"]

[connection signal="text_changed" from="RegisterScreen/VBoxContainer/Email" to="RegisterScreen" method="_on_Email_text_changed"]
[connection signal="text_changed" from="RegisterScreen/VBoxContainer/Password" to="RegisterScreen" method="_on_Password_text_changed"]
[connection signal="text_changed" from="RegisterScreen/VBoxContainer/Username" to="RegisterScreen" method="_on_Username_text_changed"]
[connection signal="pressed" from="RegisterScreen/VBoxContainer/LoginButton" to="RegisterScreen" method="_on_LoginButton_pressed"]
